<resources>
    <string name="app_name">Car App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="increment_button_label">Increment Counter</string>
    <string name="decrement_button_label">Decrement Counter</string>
    <string name="bluetooth_not_supported">Bluetooth is not supported on this device!</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="errEmptyEmailPass">Email and Password cannot be empty!</string>
    <string name="authFailed">Authentication failed</string>

</resources>