...
        android:lineSpacingExtra="8sp"
        android:text="For a seamless connectivity experience, please grant all of the following permissions."
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/requestPermissions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/requestPermissions"
...
